<resources>
    <string name="app_name">Multi Brand Sales</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="prompt_confirmation_code">Confirmation Code</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_confirm">Confirm</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_clients_list">ClientsList</string>
    <string name="title_client_list">Clients</string>
    <string name="title_client_detail">Client Detail</string>
    <string name="action_settings">Settings</string>
    <string name="action_sales">Sales</string>
    <string name="action_payments">Payments</string>
    <string name="action_ws_app">WhatsApp</string>
    <!--Add Client Form-->
    <string name="cd_name">Name</string>
    <string name="cd_last_name">Last Name</string>
    <string name="cd_second_last_name">Second Last Name</string>
    <string name="cd_email">Second Last Name</string>
    <string name="cd_phone_number">Second Last Name</string>
    <string name="action_save">Save</string>
</resources>
