<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="venturesf.alx.multibrandsales.AddClientActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/user" />

    </LinearLayout>


    <EditText
        android:id="@+id/txt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cd_name"/>

    <EditText
        android:id="@+id/txt_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cd_last_name"/>

    <EditText
        android:id="@+id/txt_s_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cd_second_last_name"/>

    <EditText
        android:id="@+id/txt_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cd_phone_number"/>

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cd_email"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_save"/>
</LinearLayout>
