<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="venturesf.alx.multibrandsales.ClientDetailActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_touch_app_white_18dp"
        android:orderInCategory="1"
        android:title="@string/action_sales"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_payment_white_18dp"
        android:orderInCategory="2"
        android:title="@string/action_payments"
        app:showAsAction="ifRoom" />

</menu>
